# INSECT

./: .gitignore  INSECT_설계.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/workflows/: python-app.yml
insect/: __init__.py  cli.py  detector.py  engine.py  fact_kinds.py  facts.py  rule_kinds.py
insect/parsers/: compose.py
insect/rules/: __init__.py  container_root.py  public_bind.py
tests/Phase 1/: test_cli.py  test_detector.py  test_engine.py  test_facts.py  test_rules.py
tests/Phase 2/: test_compose_parse.py
tests/fixtures/: compose_full_test.yml  compose_safe.yml  compose_test.yml  compose_vulnerable.yml
